# nuke.fm

./: .gitignore  .gitmodules  AGENTS.md  CONTEXT_LOG.md  PREDICTION_MARKET_MVP_SPEC.md  README.md  TODO.md  agent-notes.md  config.json  decision-log.md  preview.html  pyproject.toml  pyrightconfig.json
.claude/skills/nukefm-forecast-trader/: SKILL.md
bots/trader/: README.md
bots/trader/nukefm_trader_bot/: bot.py
docs/: bags-hackathon-predict-projects.md  bags-token-trader-thread.md  demo-video-script.md  token-creator-liquidity-thread.md  twitter-thread.md
ops/ec2/: bootstrap-host.sh  bootstrap-remote.sh  push-production.sh  run-job.sh  run-service.sh  run-with-keyring.sh  store-secret.sh  sync-state.sh
plan/: 24h-median-resolution.md  auto-seed-top-100-by-market-cap.md  chance-of-outcome-ui.md  color-nuke-values.md  fixed-threshold-range-rollover.md  market-list-sorting-and-token-metrics.md  per-market-liquidity-volume-mcap.md  scalar-long-short-markets.md  seed-top-volume-markets.md  show-token-icons.md  token-page-overlay-chart.md
plan/archived/: 24h-median-resolution.md  PREDICTION_MARKET_MVP_SPEC.md  chance-of-outcome-ui.md  color-nuke-values.md  fixed-threshold-range-rollover.md  market-list-sorting-and-token-metrics.md  per-market-liquidity-volume-mcap.md  seed-top-volume-markets.md  show-token-icons.md  token-page-overlay-chart.md  ui-dollar-formatting.md
skills/bagrug-api/: SKILL.md
skills/nuke.fm-api/: SKILL.md
src/: main.py  utils.py
src/nukefm/: __init__.py  __main__.py  accounts.py  amounts.py  app.py  auth.py  bags.py  catalog.py  config.py  database.py  dexscreener.py  display.py  jupiter.py  logging_utils.py  markets.py  settlement.py  treasury.py  weighted_pool.py
tests/: test_accounts.py  test_app.py  test_catalog.py  test_cli.py  test_display.py  test_jupiter.py  test_markets.py  test_private_api.py  test_settlement.py  test_treasury.py  test_weighted_pool.py
(+7 files in other folders)
